BUG#19318 valgrind: memory leak in ndb_mgmd

clean up after ConfigValuesFactory